[tool.poetry]
name = "suez"
version = "0.1.0"
description = "Tool for optimizing Lightning Network channels"
authors = ["Pavol Rusnak <pavol@rusnak.io>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6.2"
rich = "^10.2.2"
click = "^8.0.1"
requests = "^2.25.1"
dataclasses = {version = "^0.8", python = "~3.6"}

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
