[project]
name = "suez"
version = "0.1.0"
description = "Tool for optimizing Lightning Network channels"
readme = "README.md"
authors = ["Pavol Rusnak <pavol@rusnak.io>"]
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
